trafficManagement/yaml/rewind.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: playground
spec:
  ports:
  - port: 7888
    targetPort: 8000
  selector:
    app: whoami-app
---
apiVersion: v1
kind: Pod
metadata:
  name: whoami-pod
  namespace: playground
  labels:
    app: whoami-app
spec:
  containers:
  - name: whoami
    image: training/whoami
    ports:
    - containerPort: 8000
