trafficManagement/yaml/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: playground
  labels:
    app: whoami
    service: whoami
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: whoami
---
apiVersion: v1
kind: Pod
metadata:
  name: whoami-pod
  namespace: playground
  labels:
    app: whoami
spec:
  containers:
  - name: whoami
    image: training/whoami
    ports:
    - containerPort: 8000
      protocol: TCP
      name: http
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: playground
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-gateway-vs
  namespace: playground
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /eteration
    rewrite:
      uri: "/"
    route:
    - destination:
        host: whoami
        port:
          number: 8000
---
