trafficManagement/yaml/loadbalancing.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: playground
  labels:
    service: whoami-svc
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: whoami
---
apiVersion: v1
kind: Pod
metadata:
  namespace: playground
  name: whoami-v1
  labels:
    app: whoami
    version: v1
spec:
  containers:
  - name: whoami
    image: training/whoami
    ports:
    - containerPort: 8000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Pod
metadata:
  namespace: playground
  name: whoami-v2
  labels:
    app: whoami
    version: v2
spec:
  containers:
  - name: whoami
    image: training/whoami
    ports:
    - containerPort: 8000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Pod
metadata:
  namespace: playground
  name: whoami-v3
  labels:
    app: whoami
    version: v3
spec:
  containers:
  - name: whoami
    image: training/whoami
    ports:
    - containerPort: 8000
      protocol: TCP
      name: http
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway-controller
  namespace: playground
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-gateway-vs
  namespace: playground
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway-controller
  http:
  - match:
    - uri:
        prefix: /whoami
    route:
    - destination:
        host: whoami-svc

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: whoami-destination-rule
  namespace: playground
spec:
  host: whoami-svc
  trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
